--- a/simple-cronjob.yml
+++ b/simple-cronjob.yml
@@ -3,13 +3,13 @@
   hosts: all
 
   tasks:
-    - name: Schedule cron:
+    - name: Schedule cron
       cron:
-	   name: This job is scheduled to run at 10:00 AM every Thursday
-	   minute: “0”
-	   hour: “10”
-	   day: “*”
-	   month: “*”
-	   weekday: “4“
-	   user: root
-	   job: “/path/to/bashscript.sh”
+	  - name: This job is scheduled to run at 10:00 AM every Thursday
+	  -  minute: “0”
+	  - hour: “10”
+	  - day: “*”
+	  - month: “*”
+	  - weekday: “4“
+	  - user: root
+	  - job: “/path/to/bashscript.sh”
